--- a/.github/workflows/validate-terraform.yaml
+++ b/.github/workflows/validate-terraform.yaml
@@ -2,10 +2,13 @@
 name: Terraform
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - feature/*
+      - review/*
+      - fix/*
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    types: [opened, reopened]
 
 jobs:
   validate-terraform:
