--- a/.github/workflows/release-terraform.yaml
+++ b/.github/workflows/release-terraform.yaml
@@ -34,3 +34,14 @@ jobs:
       environment-name: k8s
       runs-on: ghr-proxmox-vm-sthings-cicd
       continue-error: false
+
+  VM-Creation-Terraform:
+    if: github.event.ref == 'refs/heads/main'
+    name: VM-Creation
+    needs: Release-Terraform
+    uses: stuttgart-things/stuttgart-things/.github/workflows/vm-creation-terraform.yaml@main
+    with:
+      module-name: proxmox-vm
+      environment-name: k8s
+      runs-on: ghr-proxmox-vm-sthings-cicd
+      continue-error: false
