--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -48,11 +48,7 @@ jobs:
       shell: bash
       run: |
         echo $PATH
-        ls -la /bin/terr*
-        ls -la /sbin/terr*
-        ls -la /usr/bin/terr*
-        ls -la /usr/sbin/terr*
-        ls -la /usr/local/sbin/terr*
+        ls -la /home/runner
         ls -la /home/runner/_work/_tool/
 
 
