--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -55,6 +55,7 @@ jobs:
   test-terraform-apply:
     needs: build-terraform-file
     runs-on: ghr-proxmox-vm-sthings-cicd
+    environment-name: k8s
     steps:
     - uses: actions/checkout@v4
 
