--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -22,6 +22,10 @@ jobs:
 
   build-terraform-file:
     runs-on: ghr-proxmox-vm-sthings-cicd
+    container:
+      image: hashicorp/terraform:1.7.0
+    environment: k8s
+    
     steps:
     - uses: actions/checkout@v4
 
@@ -53,6 +57,9 @@ jobs:
   test-terraform-apply:
     needs: build-terraform-file
     runs-on: ghr-proxmox-vm-sthings-cicd
+    container:
+      image: hashicorp/terraform:1.7.0
+    environment: k8s
     steps:
     - uses: actions/checkout@v4
 
@@ -89,6 +96,9 @@ jobs:
     if: ${{ always() }}
     needs: test-terraform-apply
     runs-on: ghr-proxmox-vm-sthings-cicd
+    container:
+      image: hashicorp/terraform:1.7.0
+    environment: k8s
     steps:
     - uses: actions/checkout@v4
 
