--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -52,6 +52,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4.1.1
+    
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
     - name: Setup Python
       uses: actions/setup-python@v5
@@ -91,6 +95,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4.1.1
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
     - name: Setup Python
       uses: actions/setup-python@v5
