--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -90,6 +90,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Download main
+      uses: actions/download-artifact@v4
+      with:
+        name: terraform_main
+    
     - run: |
           terraform init
           terraform plan -var="pve_api_url=${{ secrets.PVE_API_URL }}" -var="pve_api_user=${{ secrets.PVE_API_USER }}" -var="pve_api_password=${{ secrets.PVE_API_PASSWORD }}" -var="vm_ssh_user=${{ secrets.VM_SSH_USER }}" -var="vm_ssh_password=${{ secrets.VM_SSH_PASSWORD }}" -var="pve_api_tls_verify=${{ vars.PVE_API_TLS_VERIFY }}"
