--- a/.github/workflows/vm-creation-terraform.yaml
+++ b/.github/workflows/vm-creation-terraform.yaml
@@ -89,6 +89,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Go to tests dir
+      shell: bash
+      run: |
+        cd tests
     
     - name: Download main
       uses: actions/download-artifact@v4
